[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/Match.gd" type="Script" id=2]
[ext_resource path="res://src/ui/UILayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit--92.png" type="Texture" id=4]
[ext_resource path="res://src/ui/SettingsScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/match/MenuScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/tank-battle.tres" type="DynamicFont" id=7]

[node name="Match" type="Node2D"]
script = ExtResource( 2 )

[node name="Game" parent="." instance=ExtResource( 1 )]

[node name="UILayer" parent="." instance=ExtResource( 3 )]

[node name="MenuScreen" parent="UILayer/Screens" index="0" instance=ExtResource( 6 )]
visible = false

[node name="SettingsScreen" parent="UILayer/Screens" index="1" instance=ExtResource( 5 )]
visible = false

[node name="Message" parent="UILayer/Overlay" index="1"]
margin_top = 150.0
margin_bottom = 366.0

[node name="Mode" type="Label" parent="UILayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -112.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 7 )
text = "BATTLE ROYALE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeDescription" type="Label" parent="UILayer"]
visible = false
margin_left = 64.0
margin_top = 576.0
margin_right = 4544.0
margin_bottom = 792.0
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0.721569, 0.721569, 0.721569, 1 )
custom_fonts/font = ExtResource( 7 )
text = "ผู้เล่นคนสุดท้ายที่รอดชีวิตคือผู้ชนะ"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgErrorMessage" type="TextureRect" parent="UILayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorMessage" type="Label" parent="UILayer/BgErrorMessage"]
anchor_left = 0.233333
anchor_top = 0.2
anchor_right = 0.766667
anchor_bottom = 0.844444
margin_right = 1536.0
margin_bottom = 1044.0
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "เกมเกิดข้อผิดพลาดไม่ทราบสาเหตุ กรุณารีเฟรชใหม่อีกครั้ง"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="game_error" from="Game" to="." method="_on_Game_game_error"]
[connection signal="game_started" from="Game" to="." method="_on_Game_game_started"]
[connection signal="back_button" from="UILayer" to="." method="_on_UILayer_back_button"]
[connection signal="exit_pressed" from="UILayer/Screens/MenuScreen" to="." method="_on_MenuScreen_exit_pressed"]

[editable path="UILayer"]
